--- a/level5-ecommerce.html
+++ b/level5-ecommerce.html
@@ -38,7 +38,7 @@
 <body>
   <!-- Top Bar -->
   <div class="p-4 bg-black text-white text-center text-sm sm:p-2 sm:px-4">
-    <div class="flex justify-center">
+    <div class="flex justify-center mx-auto max-w-7xl">
       <div class="flex flex-col gap-2 sm:flex-row sm:justify-between sm:flex-1">
         <div class="flex gap-4 justify-center">
           <span>🚚 무료배송</span>
@@ -56,7 +56,7 @@
 
   <!-- Main Navigation -->
   <nav class="sticky top-0 w-full z-50 py-2 px-4 bg-white h-16">
-    <div>
+    <div class="mx-auto max-w-7xl">
       <div class="flex justify-between">
         <!-- Logo -->
         <div class="flex gap-2 items-center">
@@ -104,11 +104,11 @@
 
   <!-- Hero Carousel -->
   <div class="from-teal-400 to-teal-600 bg-gradient-to-r py-8 px-4 sm:py-16 sm:px-8">
-    <div>
-      <div>
+    <div class="mx-auto max-w-7xl">
+      <div class="lg:flex lg:justify-between">
         <div class="text-white">
           <div class="bg-teal-300 rounded-full py-2 px-4 inline-block text-sm">🎉 신제품 출시</div>
-          <h1 class="text-3xl my-4 font-extrabold sm:text-5xl">
+          <h1 class="text-3xl my-4 font-extrabold sm:text-5xl lg:text-6xl">
             혁신적인<br />
             무선 이어폰
           </h1>
@@ -126,9 +126,9 @@
   </div>
 
   <!-- Category Tabs -->
-  <div class="sticky top-16 z-50 bg-white">
-    <div>
-      <div class="whitespace-nowrap overflow-scroll overflow-y-hidden p-4">
+  <div class="sticky top-16 z-50 bg-white border-y border-gray-200">
+    <div class="mx-auto max-w-7xl">
+      <div class="whitespace-nowrap overflow-x-auto overflow-y-hidden p-4">
         <button class="rounded-full bg-green-700 text-white py-2 px-6">전체</button>
         <button class="rounded-full bg-gray-100 py-2 px-6">스마트폰</button>
         <button class="rounded-full bg-gray-100 py-2 px-6">노트북</button>
@@ -143,7 +143,7 @@
   <!-- Main Content -->
   <div class="pb-32">
     <!-- Special Offers Banner -->
-    <div class="text-white md:flex">
+    <div class="text-white mx-auto max-w-7xl md:flex">
       <div class="rounded-2xl from-blue-600 to-blue-800 bg-gradient-to-br p-8 m-4 relative overflow-hidden md:flex-1">
         <div class="aspect-square w-36 absolute bg-white/20 top-[-25%] rounded-full right-[-15%]"></div>
         <div class="space-y-4">
@@ -167,7 +167,7 @@
     </div>
 
     <!-- Filter & Sort -->
-    <div class="m-4 sm:flex sm:justify-between">
+    <div class="m-4 p-4 mx-auto max-w-7xl sm:flex sm:justify-between">
       <div class="space-y-2">
         <h2 class="text-3xl font-bold">인기 상품</h2>
         <p>지금 가장 많이 판매되는 제품들</p>
@@ -195,7 +195,7 @@
     </div>
 
     <!-- Product Grid -->
-    <div class="grid grid-cols-1 p-4 sm:grid-cols-2 sm:gap-4">
+    <div class="grid grid-cols-1 p-4 mx-auto max-w-7xl sm:grid-cols-2 sm:gap-4 lg:grid-cols-4">
       <!-- Product Card 1 -->
       <div class="rounded-xl border border-gray-200 hover:shadow-lg transition">
         <div class="p-4 from-teal-200 to-teal-400 bg-gradient-to-br relative h-96 rounded-t-xl sm:h-80">
@@ -546,13 +546,13 @@
 
   <!-- Newsletter Section -->
   <div class="bg-gray-800 text-white text-center py-16 px-2">
-    <div>
+    <div class="mx-auto max-w-7xl">
       <div class="space-y-4 m-4">
         <h3 class="text-3xl font-bold">뉴스레터 구독</h3>
         <p class="font-light">최신 제품 소식과 특별 할인 정보를 받아보세요</p>
       </div>
-      <div>
-        <div class="flex flex-col space-y-4 sm:flex-row sm:space-y-0 md:mx-16">
+      <div class="max-w-xl mx-auto">
+        <div class="flex flex-col space-y-4 w-full sm:flex-row sm:space-y-0">
           <input class="p-4 rounded-lg sm:flex-[4] sm:mx-2 sm:ml-4" type="email" placeholder="이메일 주소를 입력하세요" />
           <button class="bg-green-600 p-4 rounded-lg sm:flex-1 sm:mx-2 sm:mr-4">구독하기</button>
         </div>
@@ -562,8 +562,8 @@
 
   <!-- Footer -->
   <footer class="bg-gray-900 text-white py-8">
-    <div class="divide-y divide-gray-500 p-6 space-y-8">
-      <div class="space-y-12 md:grid md:grid-cols-2 md:grid-rows-2 md:space-y-0 md:gap-8">
+    <div class="divide-y divide-gray-500 p-6 space-y-8 mx-auto max-w-7xl">
+      <div class="grid space-y-12 md:grid-cols-2 md:space-y-0 md:gap-8 lg:grid-cols-4">
         <div class="space-y-2">
           <div class="flex gap-2">
             <div
@@ -639,7 +639,7 @@
             <a href="#">사업자정보</a>
           </div>
         </div>
-        <div class="flex justify-between text-gray-500 text-xs mx-20">
+        <div class="flex justify-between text-gray-500 text-xs mx-20 lg:mx-80">
           <p>만든 사람:
             <span class="text-gray-300">Catailog</span>
           </p>
