fix: 카드 grid gap을 sm 사이즈 미만에도 추가

--- a/level5-ecommerce.html
+++ b/level5-ecommerce.html
@@ -195,7 +195,7 @@
     </div>
 
     <!-- Product Grid -->
-    <div class="grid grid-cols-1 p-4 mx-auto max-w-7xl sm:grid-cols-2 sm:gap-4 lg:grid-cols-4">
+    <div class="grid grid-cols-1 gap-4 p-4 mx-auto max-w-7xl sm:grid-cols-2 lg:grid-cols-4">
 
       <!-- Product Card 1 -->
       <div class="group rounded-xl border border-gray-200 hover:shadow-lg transition">
